replace formation to course

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,10 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <div>
+  <div>
     <div>
-
-        <div>
-            <a href="/">Accueil</a> &nbsp;
-            <a href="/formations">Formations</a> &nbsp; &nbsp;
-            <a href="/movie-search">Recherche</a> &nbsp;
-            <span id="connectionLink"></span>
-        </div>
-
+      <a href="/">Accueil</a> &nbsp; <a href="/courses">courses</a> &nbsp;
+      &nbsp; <a href="/movie-search">Recherche</a> &nbsp;
+      <span id="connectionLink"></span>
     </div>
+  </div>
 </div>
