--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <% include ./partials/head %>
+
   <body>
     <% include ./partials/header %>
 
@@ -8,10 +9,10 @@
       <h1><%= title %></h1>
 
       <div class="french-movies">
-        <% for(movie of movies) { %>
+        <% for(course of courses) { %>
         <div>
-          <a href="/movie-details/<%= movie._id %>"
-            ><%= movie.movietitle %> (<%= movie.movieyear %>)</a
+          <a href="/courses/<%= course._id %>">
+            <%= course.title %> ( <%= course.categorie %>)</a
           >
         </div>
         <% } %>
@@ -19,11 +20,13 @@
       <br />
       <div>
         <form>
-          <legend>Ajouter un film</legend>
-          <label for="movietitle">Titre du film</label>
-          <input type="text" name="movietitle" id="movietitle" />
-          <label for="movieyear">Année du film</label>
-          <input type="text" name="movieyear" id="movieyear" />
+          <legend>Ajouter une courses</legend>
+          <label for="movietitle">Titre</label>
+          <input type="text" name="title" id="title" />
+          <label for="movieyear">prix</label>
+          <input type="text" name="prix" id="prix" />
+          <label for="movieyear">prix promo</label>
+          <input type="text" name="prixPromotion" id="prixPromotion" />
           <button type="submit">ajouter</button>
         </form>
       </div>
@@ -46,7 +49,7 @@
         console.log("using addMovieUsingFetch()");
         event.preventDefault();
 
-        fetch("/movies", {
+        fetch("/api/courses", {
           method: "POST",
           body: new FormData(form),
         })
@@ -59,9 +62,9 @@
       function checkStatus(response) {
         if (response.status >= 200 && response.status < 300) {
           let newMovieDiv = document.createElement("div");
-          const movietitle = document.getElementById("movietitle").value;
-          const movieyear = document.getElementById("movieyear").value;
-          newMovieDiv.innerHTML = `${movietitle} (${movieyear})`;
+          const title = document.getElementById("title").value;
+          const categorie = document.getElementById("categorie").value;
+          newMovieDiv.innerHTML = `${title} (${categorie})`;
           document.querySelector(".french-movies").appendChild(newMovieDiv);
           form.reset();
         } else {
