--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,7 +62,7 @@
         var xhr = new XMLHttpRequest();
         xhr.open("POST", "/login", true);
 
-        //Send the proper header incourse along with the request
+        //Send the proper header information along with the request
         xhr.setRequestHeader(
           "Content-type",
           "application/x-www-form-urlencoded"
